--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>化学 2学期末試験対策</title>
 <style>
-    /* 基本のデザイン（情報科指導法I） */
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       margin: 0;
@@ -126,7 +125,7 @@
   <h1 id="mainTitle">化学 2学期末試験対策</h1>
 
   <div id="controls">
-        <button class="tag-btn" data-tag="chemistry">化学演習 (全62問)</button>
+        <button class="tag-btn" data-tag="chemistry">化学</button>
   </div>
 
   <div id="quiz" style="display:none;">
