--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       font-size: 1.8rem;
       margin: 0.5rem 0 1rem;
     }
-    .tag-btn, #nextBtn {
-      display: block;
-      width: 100%;
+    .tag-btn, #nextBtn { /* #nextBtn はクイズ中に出るボタンですが、スタイルは共通 */
+      display: block; /* ブロック要素にして縦に積む */
+      width: 100%; /* 親要素の幅いっぱいに広げる */
       padding: 1rem;
       margin: 0.4rem 0;
       border: 1px solid #ccc;
@@ -48,7 +48,7 @@
     #options li {
       margin-bottom: 0.5rem;
     }
-    #options button {
+    #options button { /* 各選択肢のボタン */
       width: 100%;
       padding: 1rem;
       font-size: 1.1rem;
