--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>化学 試験対策</title>
-<style>
-    /* ITパスポートアプリのデザインをそのまま適用 */
+<title>化学対策問題集</title> <style>
+    /* スタイルは変更なし */
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       margin: 0;
@@ -20,9 +19,9 @@
       font-size: 1.8rem;
       margin: 0.5rem 0 1rem;
     }
-    .tag-btn, #nextBtn { /* #nextBtn はクイズ中に出るボタンですが、スタイルは共通 */
-      display: block; /* ブロック要素にして縦に積む */
-      width: 100%; /* 親要素の幅いっぱいに広げる */
+    .tag-btn, #nextBtn {
+      display: block;
+      width: 100%;
       padding: 1rem;
       margin: 0.4rem 0;
       border: 1px solid #ccc;
@@ -48,7 +47,7 @@
     #options li {
       margin-bottom: 0.5rem;
     }
-    #options button { /* 各選択肢のボタン */
+    #options button {
       width: 100%;
       padding: 1rem;
       font-size: 1.1rem;
@@ -74,14 +73,15 @@
 
     /* オーバーレイ（マスク） */
     #overlay {
-      position: fixed;
+      position: fixed; /* 画面に固定 */
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: none;
+      background-color: rgba(0, 0, 0, 0.5); /* 半透明の黒 */
+      display: none; /* 通常は非表示 */
       z-index: 10;
+      /* 縦横中央揃え */
       align-items: center;
       justify-content: center;
     }
@@ -91,8 +91,8 @@
       background: #fff;
       padding: 1.5rem;
       border-radius: 8px;
-      width: 85%;
-      max-width: 400px;
+      width: 85%; /* スマホ画面の85% */
+      max-width: 400px; /* PCでも広がりすぎないように */
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     #modal-explanation {
@@ -106,7 +106,7 @@
     #modalNextBtn {
       display: block;
       width: 100%;
-      padding: 1rem;
+  T    padding: 1rem;
       margin-top: 1.5rem;
       border: none;
       border-radius: 6px;
@@ -122,12 +122,10 @@
 </head>
 <body>
 
-    <h1 id="mainTitle">化学 試験対策</h1>
-
-  <div id="controls">
-            <button class="tag-btn" data-tag="chemistry">化学 (2学期末)</button>
-            <button class="tag-btn" data-tag="chem_basics">化学基礎 (大学入試)</button>
-  </div>
+  <h1 id="mainTitle">化学対策問題集</h1>   <div id="controls">
+            <button class="tag-btn" data-tag="basic">化学基礎</button>
+      <button class="tag-btn" data-tag="advanced">化学</button>
+        </div>
 
   <div id="quiz" style="display:none;">
     <div id="question"></div>
@@ -146,22 +144,21 @@
     </div>
   </div>
 
-
 <script>
   let questions=[],current=0,score=0;
 
   // DOMが読み込まれたらイベントリスナーを設定
   document.addEventListener('DOMContentLoaded', () => {
-    
+
     document.querySelectorAll('.tag-btn').forEach(btn=>{
       // クリックでstartQuizを呼び出す
       btn.onclick=()=>startQuiz(btn.dataset.tag);
-    });
+  S });
 
     // モーダルの「次へ」ボタンの処理
     document.getElementById('modalNextBtn').onclick = () => {
       document.getElementById('overlay').style.display = 'none'; // モーダルを閉じる
-      
+
       // 次の問題へ進む
       if (++current < questions.length) {
         showQuestion();
@@ -206,7 +203,7 @@
     return text.trim().split(/\r?\n/).slice(1).map(line => {
       if (!line) return null;
       const c = parseCsvLine(line);
-      if (c.length < 5) return null; 
+      if (c.length < 5) return null;
       const lastIdx = c.length - 1;
       const answerIdx = lastIdx - 1;
       return {
@@ -227,54 +224,58 @@
     return a;
   }
 
-  /* csvFileName (読み込むCSVファイルを指定) */
+  /* csvFileName (★変更 3/3) */
   function csvFileName(tag){
+    // ▼▼▼ ここを修正しました ▼▼▼
     return {
-            chemistry: 'chemistry.csv',
-      chem_basics: 'chemistry_basics.csv' 
-    }[tag];
+      basic: 'basic.csv',    // 「化学基礎」ボタンが押されたとき
+      advanced: 'advanced.csv' // 「化学」ボタンが押されたとき
+S }[tag];
   }
 
-  /* startQuiz (全問出題) */
+  /* startQuiz (変更なし) */
   async function startQuiz(tag){
     document.getElementById('controls').style.display='none';
-    document.getElementById('mainTitle').style.display='none'; 
-    
-    const fileName = csvFileName(tag); // ファイル名を取得
-    let pool;
-    try {
-      pool = await loadCSV(fileName); // 取得したファイル名を読み込む
-    } catch(err) {
-      console.error("CSV Load Error:", err);
-      pool = []; 
-    }
+    document.getElementById('mainTitle').style.display='none';
 
-    if (!pool || pool.length === 0) {
-        // エラーメッセージ
-        alert(`問題ファイル(${fileName})の読み込みに失敗しました。ファイルが同じ階層にあるか確認してください。`);
-        document.getElementById('controls').style.display=''; 
+    let pool;
+    const fileName = csvFileName(tag); // ← 修正後の関数からファイル名を取得
+    if (!fileName) {
+        alert("対応するCSVファイルが見つかりません。");
+        document.getElementById('controls').style.display='';
         document.getElementById('mainTitle').style.display='block';
         return;
     }
 
-    // 全問(pool.length)を取得
-    questions=shuffle(pool).slice(0,pool.length);  
+    try {
+      pool = await loadCSV(fileName); // ← 指定されたファイル名を読み込む
+    } catch(err) {
+      console.error("CSV Load Error:", err);
+      pool = [];
+    }
+
+    if (!pool || pool.length === 0) {
+        alert(`問題ファイル(${fileName})の読み込みに失敗しました。ファイルが存在するか確認してください。`);
+        document.getElementById('controls').style.display='';
+        document.getElementById('mainTitle').style.display='block';
+        return;
+    }
+
+    questions=shuffle(pool).slice(0,pool.length);
     current=score=0;
     document.getElementById('result').style.display='none';
     document.getElementById('quiz').style.display='';
     showQuestion();
   }
 
-  /**
-   * showQuestion (innerHTML を使用)
-   */
+  /* showQuestion (変更なし) */
   function showQuestion(){
     const q=questions[current];
-    document.getElementById('question').innerHTML = q.q; // ← innerHTMLでタグを解釈
+    document.getElementById('question').innerHTML = q.q;
     const ul=document.getElementById('options'); ul.innerHTML='';
     q.options.forEach((opt,i)=>{
       const li=document.createElement('li');
-      li.innerHTML=`<button>${opt}</button>`; // ← innerHTMLでタグを解釈
+      li.innerHTML=`<button>${opt}</button>`;
       li.firstChild.onclick=()=>selectAnswer(i);
       ul.appendChild(li);
     });
@@ -282,15 +283,15 @@
   }
 
 
-  /* selectAnswer (innerHTML を使用) */
+  /* selectAnswer (変更なし) */
   function selectAnswer(idx){
     const q=questions[current],ul=document.getElementById('options');
-    
+
     // 選択肢のボタンを無効化＆色付け
     [...ul.children].forEach((li,i)=>{
       const b=li.firstChild; b.disabled=true;
       if(i===q.answer)b.style.background='lightgreen';
-      else if(i===idx)b.style.background='salmon'; 
+      else if(i===idx)b.style.background='salmon';
     });
 
     // モーダルの中身を作成
@@ -300,13 +301,13 @@
       msgHtml = '<span style="color:green; font-weight: bold;">🟢 正解！</span>';
     } else {
       msgHtml = `<span style="color:red; font-weight: bold;">❌ 不正解</span>
-                 <br><span style="color:#555">正解: ${q.options[q.answer]}</span>`; // 正解選択肢もinnerHTMLで解釈
+                  <br><span style="color:#555">正解: ${q.options[q.answer]}</span>`;
     }
 
     // モーダルの要素を取得して中身をセット
-    document.getElementById('modal-message').innerHTML = msgHtml; // ← innerHTMLでタグを解釈
-    document.getElementById('modal-explanation').innerHTML = "<b>解説:</b> " + q.explanation; // ← innerHTMLでタグを解釈
-    
+    document.getElementById('modal-message').innerHTML = msgHtml;
+    document.getElementById('modal-explanation').innerHTML = "<b>解説:</b> " + q.explanation;
+
     // オーバーレイ（モーダル）を表示
     document.getElementById('overlay').style.display = 'flex';
   }
